# CTD-RAG-System

./: .gitignore  README.md  pyproject.toml
chroma_db/0cc04774-1d31-410d-b48f-f4e4d8cb9863/: index_metadata.pickle
chroma_db/4facd166-a5f6-4973-8cb7-914bb1924a7d/: index_metadata.pickle
cli/: populate_database.py
courserag/config/: logging_config.py  rag_config.py
courserag/core/: document_loader.py  rag_chain.py  rag_system.py  vector_store.py
courserag/processing/: extract_transcipt.py  preprocess_announcements.py  preprocess_course_information.py
courserag/utils/: utils.py
data/cache/: cache_metadata.json  cached_chunks.pkl
data/clean/: course_information.txt
data/raw/: announcements.txt  course_information.txt
faiss_index/: index.pkl
preprocessed-data/announcements/: announcement_01.txt  announcement_02.txt  announcement_02_groups.txt  announcement_03.txt  announcement_04.txt  announcement_05.txt  announcement_06.txt  announcement_07.txt  announcement_07_assignments.txt  announcement_08.txt  announcement_09.txt  announcement_10.txt  announcement_11.txt  announcement_12.txt  announcement_13.txt  announcement_14.txt
preprocessed-data/papers/: 2019-BERT_Pre-training_of_Deep_Bidirectional_Transformers_for_Language_Understanding.txt  A_Survey_of_Measuring_Biases_inPretrained_Language_Models__NAACL_2022_-16.txt  GPT4.txt  LLaMA3-quantization.txt  NeurIPS-2020-language-models-are-few-shot-learners-Paper.txt  T5-model.txt  distilling.txt  (+8 more)
raw-data/: announcements.txt  cursusinformatie.txt
src/: app.py  build_rag_system.py  styles.css
web/: app.py
(+48 files in other folders)
