[project]
name = "ctd-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "faiss-cpu>=1.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "moviepy>=2.2.1",
    "openai>=1.90.0",
    "pydub>=0.25.1",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "streamlit>=1.46.0",
    "tiktoken>=0.9.0",
]
