[project]
name = "ctd-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.26",
    "langchain-openai>=0.3.24",
    "moviepy>=2.2.1",
    "openai>=1.90.0",
    "protobuf<=3.20.3",
    "pydub>=0.25.1",
    "pymupdf>=1.26.1",
    "python-dotenv>=1.1.0",
    "streamlit>=1.46.0",
    "pysqlite3-binary; sys_platform == 'linux'",
    "pypdf>=5.6.1",
]
